--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -85,6 +85,7 @@
     {{ start_accordion('Build Reports', 'bullhorn') }}
         {{ accordion_header('Reports') }}
         {{ accordion_link('Queued', '/status/queue') }}
+        {{ accordion_link('Running', '/status/running') }}
         {{ accordion_link('Completed', '/status/completed') }}
         {{ accordion_link('Failed', '/status/failed') }}
     {{ end_accordion() }}
