--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,21 @@
 <html>
     {% include 'header.html' %}
     <body id="page-top">
+        <!-- Bootstrap core JavaScript-->
+        <script src="/static/vendor/jquery/jquery.min.js"></script>
+        <script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+        <!-- Core plugin JavaScript-->
+        <script src="/static/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+        <!-- Custom scripts for all pages-->
+        <script src="/static/js/sb-admin-2.min.js"></script>
+
+        <!-- Page level plugins -->
+        <script src="/static/vendor/chart.js/Chart.min.js"></script>
+        <script src="/static/vendor/datatables/jquery.dataTables.min.js"></script>
+        <script src="/static/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+
         <div id="wrapper">
             <!-- Sidebar -->
             {% include 'sidebar.html' %}
@@ -15,7 +30,7 @@
                     <!-- Begin page content -->
                     <div class="container-fluid">
                         <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                            <h1 class="h3 mb-0 text-gray-800">{{ title }}</h1>
+                            <h1 class="h3 mb-0 text-gray-800">{% block header %}{% endblock %}</h1>
                             {% if download_action %}
                             <a href="#" class="d-none d-sm-inline-block 
                                                 btn btn-sm btn-primary shadow-sm">
@@ -29,6 +44,5 @@
                 </div>
             </div>
         </div>
-        {% include 'footer.html' %}
     </body>
 </html>
