--- a/templates/toolbar.html
+++ b/templates/toolbar.html
@@ -17,13 +17,14 @@
           <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-bell fa-fw"></i>
             <!-- Counter - Alerts -->
-            <span class="badge badge-danger badge-counter">3+</span>
+            <!-- <span class="badge badge-danger badge-counter">3+</span> -->
           </a>
           <!-- Dropdown - Alerts -->
           <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
             <h6 class="dropdown-header">
               Alerts Center
             </h6>
+            <!--
             <a class="dropdown-item d-flex align-items-center" href="#">
               <div class="mr-3">
                 <div class="icon-circle bg-primary">
@@ -57,6 +58,7 @@
                 Spending Alert: We've noticed unusually high spending for your account.
               </div>
             </a>
+            -->
             <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
           </div>
         </li>
