--- a/templates/vis.html
+++ b/templates/vis.html
@@ -4,15 +4,15 @@
     {% if event.type.value == 'build' %}
         {% if event.status.value == 'success' %}
             {{ ui.text_card('success', 'Build #{}'.format(event.id), 
-                            'check', 'Success: ' + event.tag,
+                            'check', 'Success: ' + event.name,
                             '/build/{}'.format(event.id)) }}
         {% elif event.status.value == 'failure' %}
             {{ ui.text_card('danger', 'Build #{}'.format(event.id), 
-                            'exclamation-triangle', 'Failure: ' + event.tag,
+                            'exclamation-triangle', 'Failure: ' + event.name,
                             '/build/{}'.format(event.id)) }}
         {% else %}
             {{ ui.text_card('warning', 'Build #{}'.format(event.id), 
-                            'clipboard-list', 'Building: ' + event.tag,
+                            'clipboard-list', 'Building: ' + event.name,
                             '/build/{}'.format(event.id)) }}
         {% endif %}
     {% else %}
