--- a/templates/queue.html
+++ b/templates/queue.html
@@ -18,7 +18,7 @@
     <tbody>
         {% for job in scheduler.queue.waiting %}
         <tr>
-            <td><a href="/package/{{job.package.name}}">{{job.package.name}}</a></td>
+            <td><a href="/package/{{job.package.tag}}">{{job.package.name}}</a></td>
             <td>{{job.package.version}}</td>
             <td>{{job.package.arch|join(', ')}}</td>
             <td>{{job.time}}</td>
