--- a/templates/queue.html
+++ b/templates/queue.html
@@ -26,6 +26,26 @@
         {% endfor %}
     </tbody>
     {% endcall %}
+    {% call ui.table_card('Unbuildable') %}
+    <thead>
+        <tr>
+            <th>Package Name</th>
+            <th>Package Version</th>
+            <th>Package Arch</th>
+            <th>Time Entered</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for job in scheduler.waiting %}
+        <tr>
+            <td><a href="/package/{{job.package.tag}}">{{job.package.name}}</a></td>
+            <td>{{job.package.version}}</td>
+            <td>{{job.package.arch|join(', ')}}</td>
+            <td>{{job.time}}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+    {% endcall %}
     {% call ui.table_card('Cron Tasks') %}
     <thead>
         <tr>
