Fixed a variety of bugs, now working perfectly

--- a/templates/queue.html
+++ b/templates/queue.html
@@ -26,7 +26,7 @@
         {% endfor %}
     </tbody>
     {% endcall %}
-    {% call ui.table_card('Unbuildable') %}
+    {% call ui.table_card('Waiting for Dependencies') %}
     <thead>
         <tr>
             <th>Package Name</th>
