Changed oyster website branding

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -67,7 +67,7 @@
     {% endif %}
 {% endmacro %}
 
-{% macro brand(name='Oyster', icon='tools') %}
+{% macro brand(name='Stacks', icon='tools') %}
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
         <div class="sidebar-brand-icon">
             <i class="fas fa-{{ icon }}"></i>
